--- a/src/layouts/mainContent/components/description/description.module.css
+++ b/src/layouts/mainContent/components/description/description.module.css
@@ -1,14 +1,15 @@
-.description{
+.description {
   display: flex;
   flex-direction: column;
   padding: 38px 18%;
   justify-content: center;
   align-items: center;
-  background-color: #EFEFEF;
+  background-color: #efefef;
   margin-top: 30px;
 }
 
 .description_title {
+  font-size: 18px;
   font-weight: 700;
 }
 
